--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,172 @@
+@import url('https://fonts.googleapis.com/css2?family=Delius&family=Lato:wght@300;400;700&display=swap');
+:root{
+  .delius-regular {
+  font-family: "Delius", cursive;
+  font-weight: 400;
+  font-style: normal;
+}}
+
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+} 
+
+/*css*/
+
 body {
   font-family: 'Arial', sans-serif;
-  background-color: #f0f0f0;
-  margin: 0;
+  background-color: #000000;
+  background-image: url("../img/llama\ body.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100vw, auto;
+  margin: 95px;
   padding: 0;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
-h1 {
-  color: #333;
+.container{
+  width: 700px;
+  padding: 25px;
+  background-color: black;
+  background-image: url("../img/llama\ cointainer.png");
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  flex-direction:column;
+  align-items: center;
+  gap: 30px;
+  border-radius: 40px;
+  box-shadow: 22px 15px 47px 35px rgba(0,0,0,0.87);
+-webkit-box-shadow: 22px 15px 47px 35px rgba(0,0,0,0.87);
+-moz-box-shadow: 22px 15px 47px 35px rgba(0,0,0,0.87);
+
 }
+
+
+h1 {
+  font-size: 100px;
+  color: maroon;
+  background-color: #00000098;
+  -webkit-text-stroke: gold 1px;
+}
+
+P{
+  font-family: "Delius", cursive;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 20px;
+  text-align: center;
+  background-color:olive;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  border-radius: 10px;
+  border: maroon outset;
+}
+
+#userInput{
+  width: 200px;
+  height: 50px;
+  background-color: darkorange;
+  color: rgb(103, 1, 1);
+  font-size: 50px;
+  text-align: center;
+  border: black 7px outset;
+}
+
+#countdown{
+  width: 290px;
+  height: 190px;
+  background-image: url("../img/cuenta\ atras.png");
+  background-size: 300px 190px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: rgba(0, 0, 0, 0.733);
+  border-radius: 30px;
+  color: rgb(169, 14, 47);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 50px;
+  box-shadow: 6px 6px 43px 13px rgba(0,0,0,0.89);
+  -webkit-box-shadow: 6px 6px 43px 13px rgba(0,0,0,0.89);
+  -moz-box-shadow: 6px 6px 43px 13px rgba(0,0,0,0.89);
+}
+
+#result{
+  
+  margin-top: 30px;
+  padding: 5px;
+  background-color: rgba(64, 104, 3, 0.788);
+  display: flex;
+  align-items: center;
+  font-family: "Delius", cursive;
+  font-size: 27px;
+  font-weight: 400;
+  font-style: normal;
+  text-align: center;
+  color: white;
+  border-radius: 10px;
+  
+}
+
+#restart{
+  width: 300px;
+  height: 50px;
+  font-size: 40px;
+  background-image: url("../img/llama\ boton.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 400px 80px;
+  background-color: rgba(0, 0, 0, 0.66);
+  color: rgb(161, 3, 3);
+  -webkit-text-stroke: gold 1px;
+
+}
+
 #result .green {
   color: #2ecc71;
 }
